nodejs-k8s-manifests/prod/namespace-hpa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    env: prod
    project: nodejs-cicd
