nodejs-k8s-manifests/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-cicd-app-svc
  namespace: prod
  labels:
    app: nodejs-cicd-app
    env: prod
spec:
  type: ClusterIP
  selector:
    app: nodejs-cicd-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
